# simple-base

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: Globals.cmake  Utils.cmake
include/: Common.h  Register.h  benchmark.h  common.h  intrinsic.h  log.h  register.h
include/image/: image.h
include/manager/: DataManagerBase.h  data_manager.h  pipe_manager.h
include/tensor/: tensor.h
samples/: CMakeLists.txt  sample_image.cc  test_base.cc
scripts/: build_linux_x86.sh
src/: benchmark.cc  config.h.in  log.cc
src/image/: image.cc
src/manager/: data_manager.cc
src/tensor/: tensor.cc
tests/: CMakeLists.txt  test_base.cc
